// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepIndicator render renders correctly 1`] = `
<ProgressIndicator
  className="security--step-indicator"
  currentIndex={1}
>
  <Step
    className=""
    complete={null}
    current={null}
    description="Step 1: Getting started with Carbon Design System"
    disabled={null}
    invalid={null}
    label="First step"
  />
  <Step
    className=""
    complete={null}
    current={null}
    description="Step 2: Getting started with Carbon Design System"
    disabled={null}
    invalid={null}
    label="Second step"
  />
</ProgressIndicator>
`;

exports[`StepIndicator render renders if \`currentIndex\` is null 1`] = `
<ul
  class="bx--progress security--step-indicator"
>
  <li
    class="bx--progress-step bx--progress-step--incomplete security--step"
  >
    <button
      class="bx--progress-step-button bx--progress-step-button--unclickable"
      tabindex="-1"
    >
      <span
        class="bx--assistive-text"
      >
        Incomplete
      </span>
      <svg
        aria-hidden="true"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        style="will-change:transform"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
        />
        <title>
          Step 2: Getting started with Carbon Design System
        </title>
      </svg>
      <p
        class="bx--progress-label"
      >
        Second step
      </p>
      <span
        class="bx--progress-line"
      />
    </button>
  </li>
</ul>
`;

exports[`StepIndicator render renders the HTML of the node's subtree 1`] = `
<ul
  class="bx--progress security--step-indicator"
>
  <li
    class="bx--progress-step bx--progress-step--complete security--step"
  >
    <button
      class="bx--progress-step-button bx--progress-step-button--unclickable"
      tabindex="-1"
    >
      <span
        class="bx--assistive-text"
      >
        Complete
      </span>
      <svg
        aria-hidden="true"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        style="will-change:transform"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
        />
        <path
          d="M14 21.5L9 16.54 10.59 14.97 14 18.35 21.41 11 23 12.58 14 21.5z"
        />
        <title>
          Step 1: Getting started with Carbon Design System
        </title>
      </svg>
      <p
        class="bx--progress-label"
      >
        First step
      </p>
      <span
        class="bx--progress-line"
      />
    </button>
  </li>
  <li
    class="bx--progress-step bx--progress-step--current security--step"
  >
    <button
      class="bx--progress-step-button bx--progress-step-button--unclickable"
      tabindex="-1"
    >
      <span
        class="bx--assistive-text"
      >
        Current
      </span>
      <svg
        aria-hidden="true"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        style="will-change:transform"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
        />
        <path
          d="M16,10a6,6,0,1,0,6,6A6,6,0,0,0,16,10Z"
        />
        <title>
          Step 2: Getting started with Carbon Design System
        </title>
      </svg>
      <p
        class="bx--progress-label"
      >
        Second step
      </p>
      <span
        class="bx--progress-line"
      />
    </button>
  </li>
</ul>
`;
